# astranova

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  package-lock.json  package.json
api/: Dockerfile  compose.yaml  pyproject.toml  run.sh
api/data/: performance_bonsai-ethereum-strategy.json
api/src/astranova_api/: astrabit.py  main.py
caddy/: Caddyfile  compose.yaml
data/: strategy_list.json
src/: App.css  App.js  index.css  theme.js
src/components/: BacktestCard.js  Navbar.js  PriceCard.js  StrategyCard.js
src/components/pages/: About.js  Home.js
src/scenes/global/: Topbar.jsx
src/services/: Api.js
ui/: Dockerfile  compose.yaml  package-lock.json  package.json  run.sh
ui/public/: index.html
ui/src/components/: BotPerformance.js  Footer.js  Marketdata.js  Navbar.js  PriceCard.js  ReviewCard.js  StrategyCard.js
ui/src/components/pages/: About.js  Home.js
